fix: overflow form

--- a/react-frontend/src/styles/st-form.css
+++ b/react-frontend/src/styles/st-form.css
@@ -10,7 +10,7 @@
   max-height: 95vh;
   border-radius: 10px;
   position: relative;
-  overflow: visible;
+  overflow: auto;
 }
 
 .container-form::-webkit-scrollbar {
